--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,10 +7,9 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
         <h:form>
-            <p:inputText/>
-            <p:commandButton value="Registrar"/>
+            <p:inputText value="#{categoriaController.categoria.mombre}"/>
+            <p:commandButton value="Registrar" actionListener="#{categoriaController.registrar()}"/>
         </h:form>
     </h:body>
 </html>
