interfaz crear usuario

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,8 +8,7 @@
     </h:head>
     <h:body>
         <h:form>
-            <p:inputText value="#{categoriaController.categoria.mombre}"/>
-            <p:commandButton value="Registrar" actionListener="#{categoriaController.registrar()}"/>
+            <p:link value="Crear cuenta" outcome="usuario"/>
         </h:form>
     </h:body>
 </html>
