--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,6 +8,17 @@
     </h:head>
     <h:body>
         <h:form>
+            <p:messages autoUpdate="true" showDetail="true"/>
+            <h:panelGrid columns="2">
+                <p:outputLabel for="txtUsuario" value="Usuario"/>
+                <p:inputText id="txtUsuario" required="true" value="#{indexController.usuario.usuario}"/>
+
+                <p:outputLabel for="txtClave" value="Clave"/>
+                <p:password id="txtClave" required="true" value="#{indexController.usuario.clave}"/>
+                <p:column/>
+                <p:commandButton icon="ui-icon-key" value="Iniciar sesión" action="#{indexController.iniciarSesion()}"/>
+            </h:panelGrid>
+            <p:separator/>
             <p:link value="Crear cuenta" outcome="usuario"/>
         </h:form>
     </h:body>
